Fixed a bug with the scrollbar

--- a/src/global.css
+++ b/src/global.css
@@ -46,3 +46,11 @@ form > *  {
     border-radius: 50%;
     background-color: #FFE083;
 }
+
+.overflow-scroll {
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none;  /* Firefox */
+}
+.overflow-scroll::-webkit-scrollbar { 
+    display: none;  /* Safari and Chrome */
+}
